--- a/servicio.css
+++ b/servicio.css
@@ -56,7 +56,8 @@ nav ul li a:hover{
 .navegacion.active{
     color: #112d4e;
 }
-.heiader.sticky{
+/**/
+.navbar.sticky{
     border-bottom: .1rem solid rgba(0, 0, 0, .2);
 }
 
@@ -311,23 +312,44 @@ input[type=number]::-webkit-outer-spin-button {
     align-items: center;
 }
 
+
+
+
+/*========  NAV =========*/
+@media (max-width: 891px){
+    header{
+        padding: .7rem 2rem;
+    }
+}
+@media (max-width: 799px){
+    header{
+        padding: .7rem 1rem;
+    }
+}
+
+
 /*========NAVEGACION RESPONSIVE=========*/
-@media (max-width: 894px){
-    .navbar .navegacion{
+@media (max-width: 765px){
+    .navbar{
         position: absolute;
         top: 100%;
         right: 0;
-        width: 100%;
+        width: 80%;
         padding: 5rem;
+        transition: all 500ms ease;
+        visibility: hidden;
+        transform: translateX(100%);
+        transition: transform 500ms , visibility 0 ms 500ms;
         background: #112d4e;
         border-top: .1rem solid rgba(0, 0, 0, 0.2);
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
         z-index:1 ;
         font-size: 1.3rem;
-        display: none;
     }
-    .navegacion.active{
-        display: block;
+    .active{
+        visibility: visible;
+        transform: translate(0%);
+        transition: transform 500ms;
     }
     .navegacion li{
         display: block;
@@ -392,7 +414,7 @@ input[type=number]::-webkit-outer-spin-button {
         gap: 2rem;
     }
     .servicios .info-servicios{
-        text-align: center;
+        text-align: left;
     }
 }
 
@@ -418,4 +440,5 @@ input[type=number]::-webkit-outer-spin-button {
         padding-top: 2rem;
         font-size: 1.1rem;
     }
+
 }
