--- a/nosotros.css
+++ b/nosotros.css
@@ -55,7 +55,8 @@ nav ul li a:hover{
 .navegacion.active{
     color: #112d4e;
 }
-.heiader.sticky{
+/**/
+.navbar.sticky{
     border-bottom: .1rem solid rgba(0, 0, 0, .2);
 }
 
@@ -230,24 +231,43 @@ nav ul li a:hover{
 
 
 
-@media (max-width: 894px){
-    .navbar .navegacion{
+/*========  NAV =========*/
+@media (max-width: 891px){
+    header{
+        padding: .7rem 2rem;
+    }
+}
+@media (max-width: 799px){
+    header{
+        padding: .7rem 1rem;
+    }
+}
+
+/*========NAVEGACION RESPONSIVE=========*/
+@media (max-width: 765px){
+    .navbar{
         position: absolute;
         top: 100%;
         right: 0;
-        width: 100%;
+        width: 80%;
+        height: 300vh;
         padding: 5rem;
         background: #112d4e;
+        transition: all 500ms ease;
+        visibility: hidden;
+        transform: translateX(100%);
+        transition: transform 500ms , visibility 0 ms 500ms;
         border-top: .1rem solid rgba(0, 0, 0, 0.2);
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
         z-index:1 ;
         font-size: 1.3rem;
-        display: none;
     }
-    .navegacion.active{
-        display: block;
+    .active{
+        visibility: visible;
+        transform: translateX(0%);
+        transition: transform 500ms;
     }
-    .navegacion li{
+    .navbar li{
         display: block;
     }
     .logo-icono{
@@ -256,6 +276,7 @@ nav ul li a:hover{
         right: 4rem;
     }
 }
+
 
 @media (max-width: 847px){
     .container-footer .footer-map{
@@ -274,7 +295,7 @@ nav ul li a:hover{
         padding: 2rem 1rem;
     }
     .info-nosotros .info p{
-        text-align: center;
+        text-align: left;
     }
 }
 
