cambios a nav en estilo en articulo,servicio

--- a/servicio.css
+++ b/servicio.css
@@ -335,6 +335,7 @@ input[type=number]::-webkit-outer-spin-button {
         top: 100%;
         right: 0;
         width: 80%;
+        height: 300vh;
         padding: 5rem;
         transition: all 500ms ease;
         visibility: hidden;
