--- a/articulos.css
+++ b/articulos.css
@@ -79,6 +79,8 @@ nav ul li a:hover{
     text-align: center;
 }
 
+
+/*===========   AGREGAR AL CARRITO   ============*/
 /*===========   AGREGAR AL CARRITO   ============*/
 .container-card article{
     width: 100%;
@@ -108,6 +110,8 @@ nav ul li a:hover{
 }
 
 /*icono carretia*/
+/*icono carretia*/
+
 
 
 
@@ -300,6 +304,7 @@ nav ul li a:hover{
         top: 100%;
         right: 0;
         width: 80%;
+        height: 300vh;
         padding: 5rem;
         transition: all 500ms ease;
         visibility: hidden;
